--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.9.1",
+    "@google-ai/generativelanguage": "^0.2.1",
+    "@huggingface/hub": "^2.4.0",
     "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
@@ -33,6 +36,7 @@
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chromadb": "^3.0.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -40,9 +44,16 @@
     "helmet": "^7.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.1.37",
+    "llamaindex": "^0.11.17",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.5",
+    "onnxruntime-node": "^1.22.0-rev",
+    "openai": "^4.104.0",
+    "pdf-parse": "^1.1.1",
     "prisma": "^5.22.0",
+    "sharp": "^0.34.3",
+    "tesseract.js": "^5.1.1",
     "winston": "^3.17.0",
     "zod": "^3.25.76"
   },
