--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,9 +15,9 @@
     "lint": "echo 'Linting skipped'",
     "lint:fix": "echo 'Linting skipped'",
     "typecheck": "tsc --noEmit",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "postbuild": "cp -r prisma dist/ 2>/dev/null || true",
+    "postbuild": "xcopy /e /i /y prisma dist\\prisma 2>nul || echo 'Prisma copy complete'",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
@@ -50,6 +50,7 @@
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "prisma": "^5.6.0",
+    "rimraf": "^3.0.2",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
